<resources>
    <string name="app_name">Wake Me Up</string>
    <string name="input_alarm_name">Alarm Settings</string>
    <string name="title_activity_add_alarm">AddAlarm</string>
    <string name="action_settings">Settings</string>

    //ALARM VIEWS
    <string name="alarm_name">ALARM_NAME</string>
    <string name="alarm_time">0</string>
    <string name="empty_alarm_field">Enter Alarm Name</string>

    //PREFERENCES
    <string name="title_general">General</string>

    <string name="title_alarm_time">Alarm Time</string>
    <string name="summary_alarm_time">Enter the time of the alarm.</string>
    <string name="title_alarm_name">Alarm Name</string>
    <string name="summary_alarm_name">Enter the name of the alarm.</string>
    <string name="title_alarm_repeat">Repeat</string>
    <string name="summary_alarm_repeat">If checked, alarm will be reset after activated.</string>

    //BUTTONS
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_snooze">Snooze</string>
    <string name="button_done">DONE</string>

    //NOTIFICATION
    <string name="ticker_title">Next Alarm at: </string>

    //MATHGAME TEXT
    <string name="game_score"><u>Score</u></string>
    <string name="game_empty_answer">Enter Answer Here</string>

    //GCM
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    //REQUEST ACTIVITY
    <string name="request_instruction">Please hold and select a user to request to WakeYouUp!</string>

    //SCOREBOARD
    <string name="scoreboard_username">USERNAME</string>
    <string name="scoreboard_snoozes">USERNAME has snoozed SNOO_FREQ times since TIME!</string>

    //FCM
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
